<resources>
	<string name="app_name">Movie Catalogue</string>
	<string name="change_language_settings">Change Language Settings</string>
	<string name="poster_image" translatable="false">Poster Image</string>
	<string name="cover_image" translatable="false">Cover Image</string>
	<string name="movie">Movie</string>
	<string name="tv_show">TV Show</string>
	<string name="release">Release</string>
	<string name="first_air">First Air</string>
	<string name="no_connection">No connection</string>
	<string name="favorite">Favorite</string>
	<string name="favorite_added">Favorite added</string>
	<string name="favorite_removed">Favorite removed</string>
	<string name="no_favorites_yet">No favorites yet</string>
	<string name="search" translatable="false">Search</string>
	<string name="movie_favorite">Movie Favorite</string>
	<string name="tvshow_favorite">Tv Show Favorite</string>
	<string name="no_data">No Data</string>
	<string name="settings">Settings</string>
	<string name="release_reminder">Release Reminder</string>
	<string name="desc_release_reminder">Reminder showing the movie that released today</string>
	<string name="release_reminder_enable">Release reminder enable</string>
	<string name="release_reminder_disable">Release reminder disable</string>
	<string name="msg_release_reminder">has been release today!</string>
	<string name="daily_reminder">Daily Reminder</string>
	<string name="desc_daily_reminder">Reminder for return to app</string>
	<string name="daily_reminder_enable">Daily reminder enable</string>
	<string name="daily_reminder_disable">Daily reminder disable</string>
	<string name="msg_daily_reminder">Movie Catalogue missing you!</string>
</resources>
