<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.movie.detail.MovieDetailActivity">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/img_cover"
			android:layout_width="0dp"
			android:layout_height="230dp"
			android:contentDescription="@string/cover_image"
			android:scaleType="centerCrop"
			android:src="@drawable/ic_launcher_background"
			android:tint="#99000000"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:src="@tools:sample/backgrounds/scenic" />

		<ImageView
			android:id="@+id/img_poster"
			android:layout_width="100dp"
			android:layout_height="150dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="126dp"
			android:layout_marginEnd="8dp"
			android:adjustViewBounds="true"
			android:contentDescription="@string/poster_image"
			android:scaleType="centerCrop"
			android:src="@drawable/ic_launcher_background"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/img_cover"
			tools:srcCompat="@tools:sample/backgrounds/scenic" />

		<TextView
			android:id="@+id/tv_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			android:maxLines="3"
			android:textAlignment="center"
			android:textColor="@color/colorPrimary"
			android:textSize="24sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/img_poster"
			tools:text="Movie Title" />

		<RatingBar
			android:id="@+id/rating_bar"
			style="?android:attr/ratingBarStyleIndicator"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			android:numStars="5"
			android:stepSize=".5"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tv_title" />

		<TextView
			android:id="@+id/tv_text_release"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/release"
			android:textSize="18sp"
			android:visibility="invisible"
			app:layout_constraintEnd_toStartOf="@+id/tv_release"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintHorizontal_chainStyle="packed"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

		<TextView
			android:id="@+id/tv_release"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:layout_weight="1"
			android:textColor="@color/colorPrimary"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="@+id/tv_text_release"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintStart_toEndOf="@+id/tv_text_release"
			app:layout_constraintTop_toTopOf="@+id/tv_text_release"
			tools:text="2019" />

		<TextView
			android:id="@+id/tv_text_overview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/overview"
			android:textSize="16sp"
			android:visibility="invisible"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tv_text_release" />

		<TextView
			android:id="@+id/tv_overview"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="16dp"
			android:textColor="@android:color/black"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tv_text_overview"
			tools:text="@tools:sample/lorem/random" />

		<ProgressBar
			android:id="@+id/progress_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginStart="8dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="8dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/img_cover" />

	</android.support.constraint.ConstraintLayout>
</ScrollView>